--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@
 }
 
 body {
-  background-color: rgb(223, 223, 223);
+  background-color: rgb(201, 212, 224);
+  position: relative;
+  min-height: 100vh;
 }
 
 .body-container {
@@ -20,6 +22,7 @@ body {
 
 .title {
   padding: 20px;
+  margin: 17px 0;
   font-size: 47px;
 }
 
@@ -32,8 +35,6 @@ body {
 }
 
 .grid-container {
-  /* border: 2px solid rgb(117, 117, 117); */
-
   background-color: #fff;
   box-shadow: 9px 7px 15px 3px rgba(0, 0, 0, 0.1);
   display: grid;
@@ -75,13 +76,12 @@ body {
 }
 
 .submit-btn:hover {
-  background-color: rgb(218, 218, 218);
+  background-color: rgba(150, 181, 219, 0.338);
   border: 1px solid rgb(108, 108, 108);
 }
 
 .block.active {
   background-color: rgb(65, 65, 65);
-  border: 1px solid rgb(65, 65, 65);
 }
 
 .clear-btn {
@@ -93,6 +93,28 @@ body {
 }
 
 .clear-btn:hover {
-  background-color: rgb(218, 218, 218);
+  background-color: rgba(150, 181, 219, 0.338);
   border: 1px solid rgb(108, 108, 108);
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 30px 0;
+}
+
+footer {
+  font-size: 17px;
+  position: absolute;
+  bottom: 0;
+  height: 35px;
+}
+
+i {
+  margin: 0 5px;
+}
+
+i:hover {
+  color: #fff;
 }
